--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,9 +89,12 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
     implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
 
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
     implementation "androidx.multidex:multidex:2.0.1"
 
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
